--- a/resources/public/nightcoders.css
+++ b/resources/public/nightcoders.css
@@ -1,17 +1,20 @@
 html, body {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     background-color: #272b30;
+    color: #C0C0C0;
 }
 
 a {
     color: lightblue;
 }
 
-button {
-	color: white;
+button, p {
+    color: #C0C0C0;
 }
 
-.g-signin2 {
-    margin: 10px;
+.signin-signout {
+    margin: 20px auto;
+    width: 120px;
 }
 
 @media (min-width: 640px) {
