--- a/resources/public/nightcoders.css
+++ b/resources/public/nightcoders.css
@@ -21,6 +21,12 @@ button, p, h3 {
     width: 120px;
 }
 
+.small-img {
+    height: 100px;
+    width: 100%;
+    object-fit: contain;
+}
+
 @media (min-width: 640px) {
     .small-card {
         display: inline-block;
